--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,19 @@
 <html lang="en">
 
 <head>
-    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"
         content="Find optimal viewing location and live tracking for the International Space Station" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>Space Station Tracker</title>
-
 </head>
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-    </div>
+    <div id="root"></div>
 </body>
 
 </html>
