--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <style>body{background-color: black;}</style>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -16,5 +17,4 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
-
 </html>
