--- a/web/index.html
+++ b/web/index.html
@@ -7,19 +7,20 @@
                 background-color: black;
             }
         </style>
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
             content="Find optimal viewing location and live tracking for the International Space Station"
         />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link rel="manifest" href="/manifest.json" />
         <title>Space Station Tracker</title>
     </head>
 
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+        <script type="module" src="/src/index.tsx"></script>
     </body>
 </html>
